syntax = "proto3";
option csharp_namespace = "NotificationService";

import "google/protobuf/empty.proto";
import "health.proto";

package notification.v1.notification;

service NotificationAPI {
  rpc Health (google.protobuf.Empty) returns (common.HealthResponse);
}
